# mp2-lab3-stack

./: .travis.yml  CMakeLists.txt  test_main.cpp
include/: Stack_double.h  tdatacom.h  tdataroot.h  templateStack.h  tformula.h  tstack.h
samples/: main.cpp  main_formula.cpp
src/: CMakeLists.txt  Stack.cpp  tdataroot.cpp  tests.cpp  tformula.cc  tformula.cpp  tstack.cpp
test/: CMakeLists.txt  Test.cpp  my_own_test.cpp  my_tests.cpp  test_form.cpp  test_main.cpp  test_stack.cpp  test_stack_formula.cpp  test_tests.cpp  test_tformula.cpp  test_tstack.cpp  testi.cpp  tests.cpp
